# Embedded-Systems-Programming-with-Cxx

./: README.md
Chapter01/: README.md
Chapter01/Chapter01_Example01_Yocto_Build/: README.md  step00_clean_build_files.sh  step02_clone_poky.sh  step03a_clone_jetson_layer.sh  step03b_clone_raspberry_layer.sh  step04_build_environment.sh  step05a_set_machine_jetson.sh  step06b_add_layer_raspberry.sh
Chapter01/Chapter01_Example02_Yocto_CMake/: README.md  step00_clean_build_files.sh  step03b_clone_raspberry_layer.sh  step05a_set_machine_jetson.sh  step07_add_cmake.sh  step08_build_the_image.sh
Chapter01/Chapter01_Example03_Yocto_OpenEmbedded/: README.md  step04_build_environment.sh  step06a_add_layer_jetson.sh  step06b_add_layer_raspberry.sh  step07_clone_open_embedded.sh  step08_add_layer_open_embedded.sh  step09_add_layer_python.sh  step09_add_python.sh  step11_build_the_image.sh
Chapter01/Chapter01_Example04_Yocto_Customized_Layer/: README.md  example.bb  example_app.bb  step00_clean_build_files.sh  step03a_clone_jetson_layer.sh  step04_build_environment.sh  step05a_set_machine_jetson.sh  step05b_set_machine_raspberry.sh  step07_create_custom_app_layer.sh  step08_copy_custom_app_recipe_file.sh  step09_add_layer_custom_app.sh  step09_copy_custom_app_source_file.sh  (+5 more)
Chapter02/: README.md
Chapter03/: README.md
Chapter04/: README.md
Chapter05/: README.md
Chapter05/Example15_Protobuf_SQLite_Nlohmann_Properties_handling/: .gitignore  CMakeLists.txt  README.md  conanfile.txt  example_input.json  example_model.proto  example_source.cpp  step01_install_software.sh
(+216 files in other folders)
